--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Places &mdash; Free HTML5 Bootstrap 4 Theme by ProBootstrap.com</title>
-		<meta name="description" content="Free Bootstrap 4 Theme by ProBootstrap.com">
-		<meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+		<title>Places &mdash; GHIAssets ghiassets.com</title>
+		<meta name="description" content="GHIAssets">
+		<meta name="keywords" content="GHIAssets, Best Asset company in Nigeria, Best Asset company in Africa, Best Travinling partner">
     
     
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
