--- a/career.html
+++ b/career.html
@@ -103,7 +103,7 @@
             </ul>
 
           </li>
-          <li class="nav-item"><a class="nav-link" href="patners.html">International Pertners</a></li>
+          <li class="nav-item"><a class="nav-link" href="patners.html">International Partners</a></li>
 
           <li class="nav-item"><a class="nav-link btn-success btnRequestCallMenu" href="#">Request a Call</a></li>
         </ul>
