--- a/whoweare.html
+++ b/whoweare.html
@@ -103,7 +103,7 @@
             </ul>
 
           </li>
-          <li class="nav-item"><a class="nav-link" href="patners.html">International Pertners</a></li>
+          <li class="nav-item"><a class="nav-link" href="patners.html">International Partners</a></li>
 
           <li class="nav-item"><a class="nav-link btn-success btnRequestCallMenu" href="#">Request a Call</a></li>
         </ul>
@@ -239,7 +239,7 @@
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-12 text-center mb-5 probootstrap-animate" style="padding-top: 0px ;">
-            <h2 class="display-4 border-bottom probootstrap-section-heading">Vission</h2>
+            <h2 class="display-4 border-bottom probootstrap-section-heading">Vision</h2>
             <blockquote class="">
               <p class="lead mb-4"><em>
                 As a leading provider of corporate services in Africa, our vision at GHI Assets Ltd is to become the go-to company for exceptional airline representation and management, travel management, training, and technology solutions. We aim to be the trusted partner of choice for our clients, and to create a lasting impact in the communities where we operate by fostering sustainable growth and development.
