--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark probootstrap_navbar" id="probootstrap-navbar">
     <div class="container">
-      <a class="navbar-brand" href="/"> <img src="assets/GHIAssetsImages/GHI-LOGO.jpg" width="100px"
+      <a class="navbar-brand" href="/"> <img src="assets/GHIAssetsImages/GHI-LOGO.jpg" class="rounded-corners" width="100px"
           alt="GHI Assets"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#probootstrap-menu"
         aria-controls="probootstrap-menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -280,10 +280,30 @@
 
   <section class="probootstrap-section-half d-md-flex" id="section-about">
     <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/tourBroker.jpg)"></div>
+      style="background-image: url(assets/GHIAssetsImages/btml.jpg)"></div>
     <div class="probootstrap-text">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
+        <h2 class="heading mb-4"> Business Travel Management Limited</h2>
+        
         <h2 class="heading mb-4">Tour Brokers International Nigeria</h2>
+        <p><strong>Travel Management Limited (BTM)</strong> , is a member of the GHI Assets Ltd group. Business Travel
+          Management Limited was incorporated in 2004 and is an ISO 9001-2008 accredited agent as well as being
+          accredited by I.A.T.A. (International Air Transport Association).</p>
+        <p>In July 1999, the company which specializes in comprehensive travel management, corporate services and
+          logistics for businesses, became the top provider of corporate travel management, B2B logistic solutions, and
+          the pacesetter in the application of technology and innovative travel management in Nigeria. Business Travel
+          Management Limited quickly expanded to service clients throughout West & Central Africa.</p>
+        <p><a target="_blank" href="https://btmlimited.net" class="btn btn-primary">Visit Our website for more</a></p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="probootstrap-section-half d-md-flex">
+    <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/tourBroker.jpg)"></div>
+    <div class="probootstrap-text order-1">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
         <p><strong>Tour Brokers International Limited (TBI)</strong> was incorporated in 2002 to professionally package
           tourism services to selective destinations for Nigerian business and leisure travelers and to expatriates
           living in Nigeria. TBI’s goal is not only to meet the discerning travel needs of its clients but also to
@@ -294,25 +314,8 @@
           it a strong competitive advantage over others in the market. With a staff strength of 38, TBI’s highly trained
           and experienced Travel consultants ensure that all clients get optimum value for money. <br><br></p>
         <p><a href="http://tourbrokersinternational.com" class="btn btn-primary">Visit Our website for more</a></p>
-      </div>
-    </div>
-  </section>
 
 
-  <section class="probootstrap-section-half d-md-flex">
-    <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/btml.jpg)"></div>
-    <div class="probootstrap-text order-1">
-      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
-        <h2 class="heading mb-4">Business Travel Management Limited</h2>
-        <p><strong>Travel Management Limited (BTM)</strong> , is a member of the GHI Assets Ltd group. Business Travel
-          Management Limited was incorporated in 2004 and is an ISO 9001-2008 accredited agent as well as being
-          accredited by I.A.T.A. (International Air Transport Association).</p>
-        <p>In July 1999, the company which specializes in comprehensive travel management, corporate services and
-          logistics for businesses, became the top provider of corporate travel management, B2B logistic solutions, and
-          the pacesetter in the application of technology and innovative travel management in Nigeria. Business Travel
-          Management Limited quickly expanded to service clients throughout West & Central Africa.</p>
-        <p><a target="_blank" href="https://btmlimited.net" class="btn btn-primary">Visit Our website for more</a></p>
       </div>
     </div>
   </section>
