--- a/indexCaptcher3.html
+++ b/indexCaptcher3.html
@@ -46,7 +46,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark probootstrap_navbar" id="probootstrap-navbar">
     <div class="container">
-      <a class="navbar-brand" href="/"> <img src="assets/GHIAssetsImages/GHI-LOGO.jpg" width="100px"
+      <a class="navbar-brand" href="/"> <img src="assets/GHIAssetsImages/GHI-LOGO.jpg" class="rounded-corners" width="100px"
           alt="GHI Assets"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#probootstrap-menu"
         aria-controls="probootstrap-menu" aria-expanded="false" aria-label="Toggle navigation">
