test Mobile Load

--- a/index.html
+++ b/index.html
@@ -277,6 +277,114 @@
     </div>
   </section>
 
+  <section class="probootstrap-section-half d-md-flex">
+    <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/skyLogistics.jpg)"></div>
+    <div class="probootstrap-text order-1">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
+        <h2 class="heading mb-4">SKY LOGISTICS LIMITED</h2>
+        <p>The company was incorporated in 2007 specifically to act as the GSA for Delta Air Lines Inc. in Nigeria. It
+          is the General Sales Agent, Nigeria for DELTA AIR LINES INC., It was the first and only American Airline
+          (until November 2011) operating direct flights between Nigeria and the USA. Delta has daily flights between
+          Atlanta and Lagos.</p>
+        <p>Sky Logistics Cargo Limited handles the cargo for South African Airways and RwandAir.</p>
+        <p><a href="#" class="btn btn-primary">Learn More</a></p>
+      </div>
+    </div>
+  </section>
+
+  
+
+  <section class="probootstrap-section-half d-md-flex" id="section-about">
+    <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
+    <div class="probootstrap-text">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
+        <h2 class="heading mb-4">TOTAL AIR LOGISTICS LIMITED</h2>
+        <p>Total Air Logistics Limited was in incorporated in February 2011 specifically to represent China Southern
+          Airlines in Nigeria as the General Sales Agent. It currently as offline GSA for China Southern Airlines.</p>
+        <p><a href="#" class="btn btn-primary">Read More</a></p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="probootstrap-section-half d-md-flex">
+    <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/skyLogistics.jpg)"></div>
+    <div class="probootstrap-text order-1">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
+        <h2 class="heading mb-4">SKY LOGISTICS CARGO LTD</h2>
+        <p>The  company specializing in logistics and cargo services. They offer a range of solutions for the transportation, handling, and management of goods and products. With a focus on efficient and reliable delivery, the company aims to meet the diverse needs of businesses and individuals. Services provided by Sky Logistics Cargo Ltd include freight forwarding, shipping, warehousing, customs clearance, and distribution. Through their expertise and network, they facilitate the movement of goods across various regions and ensure timely and secure deliveries. The company's commitment to customer satisfaction and industry best practices underscores their role as a trusted partner in the logistics and cargo sector.</p>
+        <p>Sky Logistics Cargo Limited handles the cargo for South African Airways and RwandAir.</p>
+        <p><a href="#" class="btn btn-primary">Learn More</a></p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="probootstrap-section-half d-md-flex" id="section-about">
+    <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
+    <div class="probootstrap-text">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
+        <h2 class="heading mb-4">AIRLINE REPRESENTATIVES WEST AFRICA</h2>
+        Airline Representatives West Africa  is an organization that   act as a bridge connecting airlines with the local market, travelers, and businesses. With a focus on aviation and travel industry partnerships, the organization facilitates communication, collaboration, and cooperation between airlines and stakeholders in West Africa. Our services may include marketing, sales, distribution, and customer support on behalf of airlines. </p>
+          <p></p>
+        <p><a href="#" class="btn btn-primary">Read More</a></p>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="probootstrap-section-half d-md-flex">
+    <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/skyLogistics.jpg)"></div>
+    <div class="probootstrap-text order-1">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
+        <h2 class="heading mb-4">SKY ALLIANCE AND INTEGRATED LOGISTICS LTD</h2>
+        <p>The  company aims to streamline the movement of goods and products, ensuring timely and reliable deliveries for businesses and individuals. By leveraging advanced technology and industry expertise, Sky Alliance and Integrated Logistics Ltd strive to optimize supply chain operations, reduce costs, and enhance overall efficiency. Our commitment to innovative solutions and customer satisfaction positions us as a trusted partner in the logistics industry, contributing to the success of our clients' businesses.</p>
+        <p><a href="#" class="btn btn-primary">Learn More</a></p>
+      </div>
+    </div>
+  </section>
+
+
+  
+  
+  <section class="probootstrap-section-half d-md-flex" id="section-about">
+    <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/transcap.jpg)"></div>
+    <div class="probootstrap-text">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
+        <h2 class="heading mb-4">TRANSCAP TRAVEL BUREAUX LIMITED</h2>
+        <p>The group acquired Transcap Travel Bureaux Limited (TTBL) in 2007. The company remains one of the leading
+          travel management companies in Nigeria with a long-standing track record of successes since its days as a
+          travel division within the French Multinational CFAO for almost six decades.</p>
+        <p>
+        <dl></dl>
+        </p>
+        <p><a href="#" class="btn btn-primary">Read More</a></p>
+      </div>
+    </div>
+  </section>
+  
+  
+  <section class="probootstrap-section-half d-md-flex">
+    <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
+      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
+    <div class="probootstrap-text">
+      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
+        <h2 class="heading mb-4">APG GLOBAL ASSOCIATES NETWORK LTD</h2>
+        Our organisation operates within the global travel and aviation industry. As a network of associates, we facilitate partnerships and collaborations between airlines, travel agencies, and other stakeholders. Our focus is on enhancing the distribution and accessibility of airline services to travelers and clients worldwide. Through strategic alliances and innovative solutions, APG Global Associates Network Ltd aims to optimize sales, marketing, and customer support for airlines. By leveraging our extensive network and industry expertise, we contribute to improved connectivity, efficient operations, and enhanced customer experiences within the travel sector. We are commitmented to fostering relationships and driving growth underscores our role as a valuable intermediary in the aviation and travel ecosystem. </p>
+          <p></p>
+        <p><a href="#" class="btn btn-primary">Read More</a></p>
+      </div>
+    </div>
+  </section>
+
+
+
 
   <section class="probootstrap-section-half d-md-flex" id="section-about">
     <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
@@ -285,7 +393,7 @@
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
         <h2 class="heading mb-4"> Business Travel Management Limited</h2>
         
-        <h2 class="heading mb-4">Tour Brokers International Nigeria</h2>
+        
         <p><strong>Travel Management Limited (BTM)</strong> , is a member of the GHI Assets Ltd group. Business Travel
           Management Limited was incorporated in 2004 and is an ISO 9001-2008 accredited agent as well as being
           accredited by I.A.T.A. (International Air Transport Association).</p>
@@ -304,6 +412,7 @@
       style="background-image: url(assets/GHIAssetsImages/tourBroker.jpg)"></div>
     <div class="probootstrap-text order-1">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
+        <h2 class="heading mb-4">Tour Brokers International Nigeria</h2>
         <p><strong>Tour Brokers International Limited (TBI)</strong> was incorporated in 2002 to professionally package
           tourism services to selective destinations for Nigerian business and leisure travelers and to expatriates
           living in Nigeria. TBI’s goal is not only to meet the discerning travel needs of its clients but also to
@@ -320,52 +429,9 @@
     </div>
   </section>
 
-  <section class="probootstrap-section-half d-md-flex" id="section-about">
-    <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/transcap.jpg)"></div>
-    <div class="probootstrap-text">
-      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
-        <h2 class="heading mb-4">TRANSCAP TRAVEL BUREAUX LIMITED</h2>
-        <p>The group acquired Transcap Travel Bureaux Limited (TTBL) in 2007. The company remains one of the leading
-          travel management companies in Nigeria with a long-standing track record of successes since its days as a
-          travel division within the French Multinational CFAO for almost six decades.</p>
-        <p>
-        <dl></dl>
-        </p>
-        <p><a href="#" class="btn btn-primary">Read More</a></p>
-      </div>
-    </div>
-  </section>
 
 
-  <section class="probootstrap-section-half d-md-flex">
-    <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/skyLogistics.jpg)"></div>
-    <div class="probootstrap-text order-1">
-      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
-        <h2 class="heading mb-4">SKY LOGISTICS LIMITED</h2>
-        <p>The company was incorporated in 2007 specifically to act as the GSA for Delta Air Lines Inc. in Nigeria. It
-          is the General Sales Agent, Nigeria for DELTA AIR LINES INC., It was the first and only American Airline
-          (until November 2011) operating direct flights between Nigeria and the USA. Delta has daily flights between
-          Atlanta and Lagos.</p>
-        <p>Sky Logistics Cargo Limited handles the cargo for South African Airways and RwandAir.</p>
-        <p><a href="#" class="btn btn-primary">Learn More</a></p>
-      </div>
-    </div>
-  </section>
-
-  <section class="probootstrap-section-half d-md-flex" id="section-about">
-    <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
-    <div class="probootstrap-text">
-      <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
-        <h2 class="heading mb-4">TOTAL AIR LOGISTICS LIMITED</h2>
-        <p>Total Air Logistics Limited was in incorporated in February 2011 specifically to represent China Southern
-          Airlines in Nigeria as the General Sales Agent. It currently as offline GSA for China Southern Airlines.</p>
-        <p><a href="#" class="btn btn-primary">Read More</a></p>
-      </div>
-    </div>
-  </section>
+  
   <!-- END section -->
 
   <section class="probootstrap_section" style="padding-bottom: 0px ;">
@@ -448,7 +514,8 @@
 
   <script src="assets/js/jquery.min.js"></script>
 
-  <script src="assets/js/popper.min.js"></script>
+  <!-- <script src="assets/js/popper.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js" integrity="sha512-nnzkI2u2Dy6HMnzMIkh7CPd1KX445z38XIu4jG1jGw7x5tSL3VBjE44dY4ihMU1ijAQV930SPM12cCFrB18sVw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/owl.carousel.min.js"></script>
 
