--- a/career.html
+++ b/career.html
@@ -58,6 +58,7 @@
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="whoweare.html" data-bs-toggle="dropdown">Who we are</a>
             <ul class="dropdown-menu ">
+              <li> <a class="dropdown-item" href="whoweare.html"> About Us </a></li>
               <li> <a class="dropdown-item" href="career.html"> Career </a></li>
               <li> <a class="dropdown-item" href="ourteam.html"> Our Team</a></li>
             </ul>
@@ -95,7 +96,7 @@
                 </ul>
               </li>
               <li>
-                <a class="dropdown-item" href="#">Others</a>
+                <a class="dropdown-item" href="#">Training & Development</a>
                 <ul class="submenu dropdown-menu">
                   <li><a class="dropdown-item" href="http://www.frontieracademy.com.ng/">Frontier Academy Limited</a></li>
                 </ul>
