--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="whoweare.html" data-bs-toggle="dropdown">Who we are</a>
             <ul class="dropdown-menu ">
+              <li> <a class="dropdown-item" href="whoweare.html"> About Us </a></li>
               <li> <a class="dropdown-item" href="career.html"> Career </a></li>
               <li> <a class="dropdown-item" href="ourteam.html"> Our Team</a></li>
             </ul>
@@ -101,11 +102,21 @@
                   <li><a class="dropdown-item" href="https://www.rwandair.com/">Air Logistics Cameroon</a></li>
                   <li><a class="dropdown-item"
                       href="http://www.flysaa.com/cm/en/home!loadCountryLanguage.action?request_locale=en_CM&amp;splashLocale=en&amp;splashCntry=CM&amp;isCookieEnabled=true">Airline
-                      Management Services Cameroon</a></li>
+                      Management Services Cameroon</a>
+                  </li>
+                  <li><a class="dropdown-item"
+                      href="http://www.flysaa.com/cm/en/home!loadCountryLanguage.action?request_locale=en_CM&amp;splashLocale=en&amp;splashCntry=CM&amp;isCookieEnabled=true">General Business Services Congo</a>
+                  </li>
+                  <li><a class="dropdown-item"
+                      href="http://www.flysaa.com/cm/en/home!loadCountryLanguage.action?request_locale=en_CM&amp;splashLocale=en&amp;splashCntry=CM&amp;isCookieEnabled=true">GHI Assets Pty South Africa</a>
+                  </li>
+                  <li><a class="dropdown-item"
+                      href="http://www.flysaa.com/cm/en/home!loadCountryLanguage.action?request_locale=en_CM&amp;splashLocale=en&amp;splashCntry=CM&amp;isCookieEnabled=true">Total Air Logistics Ltd Sierra Leone</a>
+                  </li>
                 </ul>
               </li>
               <li>
-                <a class="dropdown-item" href="#">Others</a>
+                <a class="dropdown-item" href="#">Training & Development</a>
                 <ul class="submenu dropdown-menu">
                   <li><a class="dropdown-item" href="http://www.frontieracademy.com.ng/">Frontier Academy Limited</a>
                   </li>
@@ -238,43 +249,6 @@
   <!-- END section -->
 
 
-  <!--<section class="probootstrap_section" id="section-city-guides">
-      <div class="container">
-        <div class="row text-center mb-5 probootstrap-animate">
-          <div class="col-md-12">
-            <h2 class="display-4 border-bottom probootstrap-section-heading">Top Places Around The World</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6 probootstrap-animate mb-3">
-            <a href="#" class="probootstrap-thumbnail">
-              <img src="assets/images/img_1.jpg" alt="Free Template by ProBootstrap.com" class="img-fluid">
-              <div class="probootstrap-text">
-                <h3>Buena</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-6 probootstrap-animate mb-3">
-            <a href="#" class="probootstrap-thumbnail">
-              <img src="assets/images/img_2.jpg" alt="Free Template by ProBootstrap.com" class="img-fluid">
-              <h3>Road</h3>
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-6 probootstrap-animate mb-3">
-            <a href="#" class="probootstrap-thumbnail">
-              <img src="assets/images/img_3.jpg" alt="Free Template by ProBootstrap.com" class="img-fluid">
-              <h3>Australia</h3>
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-6 probootstrap-animate mb-3">
-            <a href="#" class="probootstrap-thumbnail">
-              <img src="assets/images/img_4.jpg" alt="Free Template by ProBootstrap.com" class="img-fluid">
-              <h3>Japan</h3>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
 
 
@@ -290,7 +264,7 @@
 
   <section class="probootstrap-section-half d-md-flex">
     <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/skyLogistics.jpg)"></div>
+      style="background-image: url(assets/GHIAssetsImages/delta_airline.png)"></div>
     <div class="probootstrap-text order-1">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
         <h2 class="heading mb-4">SKY LOGISTICS LIMITED</h2>
@@ -308,7 +282,7 @@
 
   <section class="probootstrap-section-half d-md-flex" id="section-about">
     <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
+      style="background-image: url(assets/GHIAssetsImages/kenya_airline.png)"></div>
     <div class="probootstrap-text">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
         <h2 class="heading mb-4">TOTAL AIR LOGISTICS LIMITED</h2>
@@ -322,7 +296,7 @@
 
   <section class="probootstrap-section-half d-md-flex">
     <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/skyLogistics.jpg)"></div>
+      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
     <div class="probootstrap-text order-1">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
         <h2 class="heading mb-4">SKY LOGISTICS CARGO LTD</h2>
@@ -342,7 +316,7 @@
 
   <section class="probootstrap-section-half d-md-flex" id="section-about">
     <div class="probootstrap-image probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/airLogistics.jpg)"></div>
+      style="background-image: url(assets/GHIAssetsImages/Cote_d_voire_aircraft.jpg)"></div>
     <div class="probootstrap-text">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInRight">
         <h2 class="heading mb-4">AIRLINE REPRESENTATIVES WEST AFRICA</h2>
@@ -359,7 +333,7 @@
 
   <section class="probootstrap-section-half d-md-flex">
     <div class="probootstrap-image order-2 probootstrap-animate" data-animate-effect="fadeIn"
-      style="background-image: url(assets/GHIAssetsImages/skyLogistics.jpg)"></div>
+      style="background-image: url(assets/GHIAssetsImages/Riwanda_airline.jpg)"></div>
     <div class="probootstrap-text order-1">
       <div class="probootstrap-inner probootstrap-animate" data-animate-effect="fadeInLeft">
         <h2 class="heading mb-4">SKY ALLIANCE AND INTEGRATED LOGISTICS LTD</h2>
