--- a/patners.html
+++ b/patners.html
@@ -58,6 +58,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="whoweare.html" data-bs-toggle="dropdown">Who we are</a>
             <ul class="dropdown-menu ">
+              <li> <a class="dropdown-item" href="whoweare.html"> About Us </a></li>
               <li> <a class="dropdown-item" href="career.html"> Career </a></li>
               <li> <a class="dropdown-item" href="ourteam.html"> Our Team</a></li>
             </ul>
@@ -95,7 +96,7 @@
                 </ul>
               </li>
               <li>
-                <a class="dropdown-item" href="#">Others</a>
+                <a class="dropdown-item" href="#">Training & Development</a>
                 <ul class="submenu dropdown-menu">
                   <li><a class="dropdown-item" href="http://www.frontieracademy.com.ng/">Frontier Academy Limited</a></li>
                 </ul>
@@ -221,8 +222,8 @@
               <div class="probootstrap-media-image" style="background-image: url(assets/images/partners/p_emirates.png);background-repeat:no-repeat; background-position: center center; background-color: grey;">
               </div>
               <div class="media-body">
-                <h5 class="mb-3"> <a href="https://www.emirates.com/"> Emirates</a>  </h5>
-                <p>Emirates is a major airline based in Dubai, offering commercial passenger and cargo flights across the globe. </p>
+                <h5 class="mb-3"> <a href="https://www.emirates.com/"> Emirates Holidays</a>  </h5>
+                <p>Emirates Holidays is a major airline based in Dubai, offering commercial passenger and cargo flights across the globe. </p>
               </div>
             </div>
 
@@ -240,10 +241,8 @@
 
         <div class="row">
           <div class="col-md-6">
-
             <div class="media probootstrap-media d-flex align-items-stretch mb-4 probootstrap-animate">
               <div class="probootstrap-media-image" style="background-image: url(assets/images/partners/p_SSA.png);background-repeat:no-repeat; background-position: center center; background-color: grey;">
-
               </div>
               <div class="media-body">
                 <h5 class="mb-3"><a href="https://www.flysaa.com/"> South African Airways </a>  </h5>
@@ -252,17 +251,16 @@
             </div>
 
             <div class="media probootstrap-media d-flex align-items-stretch mb-4 probootstrap-animate">
-              <div class="probootstrap-media-image" style="background-image: url(assets/images/partners/p_chinasouthern.png);background-repeat:no-repeat; background-position: center center; background-color: grey;">
+              <div class="probootstrap-media-image" style="background-image: url(assets/images/partners/unitedCargo.png);background-repeat:no-repeat; background-position: center center; background-color: grey;">
               </div>
               <div class="media-body">
-                <h5 class="mb-3"> <a href="https://www.csair.com/cn/"> China Southern Airlines </a></h5>
-                <p>China Southern Airlines is a major airline in China, offering domestic and international passenger and cargo services to various destinations worldwide. </p>
+                <h5 class="mb-3"> <a href="https://www.csair.com/cn/"> United Cargo </a></h5>
+                <p>United Cargo is a leading global air cargo provider, offering efficient logistics services for businesses worldwide. With a strong network and modern technology.</p>
               </div>
             </div>
 
           </div>
-          <div class="col-md-6">
-            
+          <div class="col-md-6">            
             <div class="media probootstrap-media d-flex align-items-stretch mb-4 probootstrap-animate">
               <div class="probootstrap-media-image" style="background-image: url(assets/images/partners/p_cote.png);background-repeat:no-repeat; background-position: center center; background-color: grey;">
               </div>
@@ -280,7 +278,32 @@
                 <p>GHI Corporate Services provides comprehensive and customizable corporate solutions, such as offshore company formation to clients around the world. </p>
               </div>
             </div>
+          </div>
+        </div>
 
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="media probootstrap-media d-flex align-items-stretch mb-4 probootstrap-animate">
+              <div class="probootstrap-media-image" style="background-image: url(assets/images/partners/royalCaribbean.png);background-repeat:no-repeat; background-position: center center; background-color: grey;">
+              </div>
+              <div class="media-body">
+                <h5 class="mb-3"><a href="https://www.royalcaribbean.com/"> Royal Caribbean </a>  </h5>
+                <p>Royal Caribbean International is a top-tier cruise line renowned for its innovative ships, luxurious experiences, and exceptional entertainment. </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">            
+            <div class="media probootstrap-media d-flex align-items-stretch mb-4 probootstrap-animate">
+              <div class="probootstrap-media-image" style="background-image: url(assets/images/partners/taag.png);background-repeat:no-repeat; background-position: center center; background-color: grey;">
+              </div>
+              <div class="media-body">
+                <h5 class="mb-3"><a href="https://www.taag.com/">  TAAG Angola </a></h5>
+                <p>TAAG Angola is the national airline connecting Angola to the world with a modern fleet, safety focus, and vital international connections, contributing to economic growth and global travel. </p>
+              </div>
+            </div>
+
+          
           </div>
         </div>
 
