--- a/career.html
+++ b/career.html
@@ -196,7 +196,7 @@
          <h2 class="heading mb-4">Employment Application</h2>
            <!-- <p><em>General Manager</em></p> -->
          
-          <form action="forms/employment.php" enctype="multipart/form-data" method="post" role="form" class="probootstrap-form  "  id="requestCallForm">
+          <form action="forms/career.php" enctype="multipart/form-data" method="post" role="form" class="probootstrap-form  "  id="requestCallForm">
 
             <div class="form-group">
               <div class="row mb-3">
@@ -212,7 +212,7 @@
                   <div class="form-group">
                     <label for="">Surname </label>
                     <div class="probootstrap-date-wrap">
-                      <input type="text" id="sname" name="sname" class="form-control" placeholder="Surname" required>
+                      <input type="text" id="lname" name="lname" class="form-control" placeholder="Surname" required>
                     </div>
                   </div>
                 </div>
@@ -268,10 +268,10 @@
                 </div>
                 <div class="col-md">
                   <div class="form-group">
-                    <label for="id_label_single">Are you willing to relocate?</label>
+                    <label for="relocate">Are you willing to relocate?</label>
   
-                    <label for="id_label_single" style="width: 100%;">
-                      <select class="js-example-basic-single js-states form-control" name="relocate" id="id_label_single" style="width: 100%;">
+                    <label for="relocate" style="width: 100%;">
+                      <select class="js-example-basic-single js-states form-control" name="relocate" id="relocate" style="width: 100%;" required>
                         <option value="Yes">Yes</option>
                         <option value="No">No</option>                      
                         
@@ -288,9 +288,9 @@
               <div class="col-md">
               <div class="form-group">
                 <label for="message" class="">Skills</label>
-                <textarea cols="30" rows="5" class="form-control" id="skills" name="skills"
+                <textarea cols="30" rows="6" class="form-control" id="skills" name="skills"
                   placeholder="skills" required data-rule="required"
-                  data-msg="skills"></textarea>
+                  data-msg="skills" required></textarea>
               </div>
             </div>
 
@@ -300,6 +300,16 @@
                 <div class="probootstrap-date-wrap">
                   <span class="icon ion-calculator"></span>
                   <input type="number" id="salary" name="salary" class="form-control" placeholder="Salary requirement"
+                    required>
+                </div>
+              </div>
+
+
+              <div class="form-group">
+                <label for="probootstrap-date-arrival">Attach Your CV</label>
+                <div class="probootstrap-date-wrap">
+                  <span class="icon ion-calculator"></span>
+                  <input type="file" id="cvFile" name="cvFile" class="form-control" placeholder="Attach Your CV" accept=".pdf,.doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document"
                     required>
                 </div>
               </div>
